--- a/weighted Hardy Weinberg initial exploration.ipynb
+++ b/weighted Hardy Weinberg initial exploration.ipynb
@@ -12,6 +12,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $ t_{i} \\stackrel{iid}{\\sim} Uniform(0,1) $ and let $ h: [0, 1] \\rightarrow \\mathbb{R}^{3} $ and, more specifically, let $ h(t) = [t^{2}, 2t(1-t), (1-t)^{2}]^{T} $.\n",
+    "\n",
+    "Let $ X_{i} = h(t_{i}) $ and \n",
+    "\n",
+    "$ \\mathbf{X} = \\begin{bmatrix} X_{1}^{T} \\\\ \\vdots \\\\ X_{n}^{T} \\end{bmatrix} $ and P = $ \\mathbf{X}\\mathbf{X}^{T} $\n",
+    "\n",
+    "Let $ \\Lambda^{(u)} = \\begin{bmatrix} c_{u} X_{1}^{T}X_{1} & ... & c_{u} X_{1}^{T}X_{n} \\\\ \\vdots & \\ddots & \\vdots \\\\ c_{u} X_{n}^{T} X_{1} & ... & c_{u} X_{n}^{T} X_{n} \\end{bmatrix}$\n",
+    "\n",
+    "Let $ V = [n] $ and $ A^{(u)} \\in \\{0,1\\}^{n \\times n} \\stackrel{iid}{\\sim} Bernoulli(P) $ be a symmetric and hollow adjacency matrix.\n",
+    "\n",
+    "Let $ S \\subset V $ and $ |S| = m $. Let $ W $ be a symmetric and hollow matrix of weights, where $ W_{jk} \\sim Poisson(\\Lambda^{(1)}_{jk}) $ if $ j, k \\in S $ and $ W_{jk} \\sim Poisson(\\Lambda^{(0)}_{jk}) $ otherwise.\n",
+    "\n",
+    "Now let $ C = A \\circ W $. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
