Add drosophilia fits.

--- a/weighted Hardy Weinberg initial exploration.ipynb
+++ b/weighted Hardy Weinberg initial exploration.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "Let $ S \\subset V $ and $ |S| = m $. Let $ W $ be a symmetric and hollow matrix of weights, where $ W_{jk} \\sim Poisson(\\Lambda^{(1)}_{jk}) $ if $ j, k \\in S $ and $ W_{jk} \\sim Poisson(\\Lambda^{(0)}_{jk}) $ otherwise.\n",
     "\n",
-    "Now let $ C = A \\circ W $. "
+    "Now let $ C = A \\circ W $.\n",
+    "\n",
+    "Under the \"null\", $ \\Lambda^{(1)} = \\Lambda^{(0)} $."
    ]
   },
   {
