parallelized right drosophilia

--- a/unweighted drosophilia fitting.ipynb
+++ b/unweighted drosophilia fitting.ipynb
@@ -31,8 +31,7 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "left_adj, left_labels = load_drosophila_left(return_labels=True)\n",
-    "right_adj, right_labels = load_drosophila_right(return_labels=True)"
+    "left_adj, left_labels = load_drosophila_left(return_labels=True)\n"
    ]
   },
   {
@@ -540,6 +539,18 @@
    "display_name": "hh",
    "language": "python",
    "name": "hh"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
