--- a/weighted Hardy Weinberg initial exploration.ipynb
+++ b/weighted Hardy Weinberg initial exploration.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from wLSM_utils import *\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -384,6 +386,82 @@
     "ax.scatter(X_hat100[:, 0], X_hat100[:, 1], X_hat100[:, 2], c=c_)\n",
     "ax.set_title('n=%i, m=%i, not_S w_ij ~ pois(%i), S w_ij ~ pois(%i)'%(n, m, 5, 100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns = 500 * 10**np.arange(1,5)\n",
+    "ms = ns/10\n",
+    "ms = ms.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c0=5\n",
+    "c1=100\n",
+    "\n",
+    "ase5_500, ase100_500 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
+    "ase5_5000, ase100_5000 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
+    "ase5_50000, ase100_50000 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
+    "\n",
+    "import _pickle as pkl\n",
+    "pkl.dump(ase5_500, open('ase5_500.pkl', 'wb'))\n",
+    "pkl.dump(ase100_500, open('ase100_500.pkl', 'wb'))\n",
+    "\n",
+    "pkl.dump(ase5_5000, open('ase5_5000.pkl', 'wb'))\n",
+    "pkl.dump(ase100_5000, open('ase100_5000.pkl', 'wb'))\n",
+    "\n",
+    "pkl.dump(ase5_50000, open('ase5_50000.pkl', 'wb'))\n",
+    "pkl.dump(ase100_50000, open('ase100_50000.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1)\n",
+    "jigger = 0.05\n",
+    "ax.scatter(np.arange(1, len(sv5[:10]) + 1), sv5[:10], c = 'r', s=7.5, label = 'c0=5, c1=5')\n",
+    "ax.scatter(np.arange(1+jigger*2, len(sv10[:10])+jigger*2 + 1), sv10[:10], c = 'b', s=7.5, label = 'c0=5, c1=10')\n",
+    "ax.scatter(np.arange(1+jigger*3, len(sv20[:10])+jigger*3 + 1), sv20[:10], c = 'g', s=7.5, label = 'c0=5, c1=20')\n",
+    "ax.scatter(np.arange(1+jigger*4, len(sv100[:10])+jigger*4 + 1), sv100[:10], c = 'c', s=7.5, label = 'c0=5, c1=100')\n",
+    "ax.set_title('Jiggered Singular values, n=%i, m=%i'%(n, m))\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_hat5_500 = ase5_500.latent_left_\n",
+    "sv5_500 = ase5_500.singular_values_\n",
+    "\n",
+    "X_hat5_500 = ase5_500.latent_left_\n",
+    "sv100_500 = ase100_500.singular_values_\n",
+    "\n",
+    "X_hat5_5000 = ase5_5000.latent_left_\n",
+    "sv5_5000 = ase5_5000.singular_values_\n",
+    "\n",
+    "X_hat100_5000 = ase100_5000.latent_left_\n",
+    "sv100_5000 = ase100_5000.singular_values_\n",
+    "\n",
+    "X_hat5_50000 = ase5_50000.latent_left_\n",
+    "sv5_50000 = ase5_50000.singular_values_\n",
+    "\n",
+    "X_hat100_50000 = ase100_50000.latent_left_\n",
+    "sv100_50000 = ase100_50000.singular_values_"
+   ]
   }
  ],
  "metadata": {
@@ -391,18 +469,6 @@
    "display_name": "hh",
    "language": "python",
    "name": "hh"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
   }
  },
  "nbformat": 4,
