Update func function.

--- a/cyclops.ipynb
+++ b/cyclops.ipynb
@@ -21,11 +21,11 @@
     "\n",
     "Given $ A $ the goal is to recover the community labels $ Y $.\n",
     "\n",
-    "If, say, $ X_{i} \\sim \\pi X^{(1)} + (1 - \\pi)X^{(2)} $ then we could use GMM o ASE to estimate communities -- but we are not in that setting. Instead, we can iterate over subsets of $ [K] $, given by the estimated labels from GMM, and fit a series of $ d $ dimensional polynomials. This set of surfaces may be limiting, but it allows for simple fitting and is amenable to exploratory analysis. The set of polynomials is also straight forward in the number of parameters and can be easily integrated into a penalized likelihood framework -- making comparisons across different models straight forward. \n",
+    "If, say, $ X_{i} \\sim \\pi X^{(1)} + (1 - \\pi)X^{(2)} $ then we could use GMM o ASE to estimate communities -- but we are not in that setting. Instead, we can iterate over subsets of $ [K] $, given by the estimated labels from GMM, and fit a series of $ p $ dimensional polynomials. This set of surfaces may be limiting, but it allows for simple fitting and is amenable to exploratory analysis. The set of polynomials is also straight forward in the number of parameters and can be easily integrated into a penalized likelihood framework -- making comparisons across different models straight forward. \n",
     "\n",
     "Let $ \\hat{X} = ASE(A) $ and $ \\hat{Y} = GMM(\\hat{X}) \\subset [K]^{n} $. \n",
     "\n",
-    "Let $ j $ be a subset of $ [K] $ and $ f_{j}(\\cdot) $ be the fitted polynomial surface using the $ \\hat{X} $ corresponding to the clusters of $ j $. To avoid degenerate fits, we only consider fitting the $ p - 1 $ leading terms and a the constant of the polynomial, i.e. we consider $ a_0 t_{0}^{k} + ... + a_{p-1}^{k} t_{p-1} + a_{p} $. To calculate the likelihood of the model we make yet another assumption -- that $ \\hat{X} | X_{i}, \\nu \\sim N(X_{i}, \\nabla \\nu(X_{i}) \\sigma^{2}) $. Or, given the latent position and the true surface, the estimated postition is normally distributed along the vector perpendicular to $ S $ at $ X_{i} $. \n",
+    "Let $ j $ be a subset of $ [K] $ and $ f_{j}(\\cdot) $ be the fitted polynomial surface using the $ \\hat{X} $ corresponding to the clusters of $ j $. To avoid degenerate fits, we only consider fitting the $ p - 1 $ leading terms and a the constant of the polynomial, i.e. we consider $ a_0 t_{0}^{k} + ... + a_{p-1}^{k} t_{p-1} + a_{p} $. To calculate the likelihood of the model we make yet another assumption -- that $ \\hat{X} | X_{i}, \\nu \\sim N(X_{i}, \\nabla \\nu(X_{i}) \\sigma^{2}) $. Or, given the latent position and the true surface, the estimated postition is normally distributed along the vector perpendicular to $ S $ at $ X_{i} $ with variance that does not depend on $ X_{i} $.\n",
     "\n",
     "Let $ r_{i} = \\hat{X}_{i} - f_{j}(\\hat{X}_{i}) $. Then, under the model assumptions, the likelihood of observing the estimated latent positions associated with $ j $ is given by\n",
     "$$ \\mathcal{L}_{S, j} = \\left|\\int_{\\hat{S}} 1 ds\\right|^{-n_{j}} \\prod_{i=1}^{n_{j}} \\left(\\frac{1}{\\sqrt{2\\pi}}\\right)^{n_{j}}  \\exp{\\left\\{-\\frac{1}{2 \\hat{\\sigma}^{2}} r_{i}^{2}\\right\\}} $$\n",
@@ -34,6 +34,22 @@
     "$$ \\mathcal{L}_{j} = \\left( \\left|\\int_{\\hat{S}} 1 ds\\right|^{-n_{j}} \\prod_{i=1}^{n_{j}} \\left(\\frac{\\hat{\\pi}_{j}}{\\sqrt{2\\pi\\hat{\\sigma}^{2}}}\\right)^{n_{j}}  \\exp{\\left\\{-\\frac{1}{2 \\hat{\\sigma}^{2}} r_{i}^{2}\\right\\}} \\right) \\prod_{k \\not \\in j}\\prod_{t:\\hat{Y}_{t} = k} \\frac{\\hat{\\pi}_{k}}{\\sqrt{2 \\pi \\det(\\hat{\\Sigma}_{k})}} \\exp{\\left\\{-\\frac{1}{2} (\\hat{X}_{t} - \\hat{\\mu}_{k})^{T} \\hat{\\Sigma}_{k} (\\hat{X}_{t} - \\hat{\\mu}_{k})\\right\\}} $$ where $ \\hat{\\pi}_{k}, \\hat{\\mu}_{k}, \\hat{\\Sigma}_{k} $ are the mixing proportion, mean and covariance estimates given by GMM and $ \\hat{\\pi}_{j} $ is the proportion of data in the estimated surface.\n",
     "\n",
     "With the model posited and its likelihood laid out, our goal is clear -- find the subset of $ [K] $ that maximizes $ \\mathcal{L}_{j} $ (or some penalized version of it).\n",
+    "\n",
+    "Let $ |j| = s $, we have (recall $ \\hat{X} \\in \\mathbb{R}^{p} $)\n",
+    "\n",
+    "$ (K - s - 1)p $ parameters for the means associated with the Gaussians\n",
+    "\n",
+    "$ (K - s - 1)p(p-1)/2 $ parameters for the covariances associated with the Gaussians\n",
+    "\n",
+    "$ p $ parameters for the estimated surface\n",
+    "\n",
+    "$ 1 $ parameter for the variance off of the surface\n",
+    "\n",
+    "$ K - s - 1 $ parameters for mixing coefficients \n",
+    "\n",
+    "$ T = (K - s - 1)p + (K - s - 1)p(p-1)/2 + p + 1 + K - s - 1 $\n",
+    "\n",
+    "$ BIC_{j} = 2\\mathcal{L}_{j} - T \\log n $\n",
     "\n",
     "NB: i am still trying to figure out what to consider as a parameter.. (in particular, how to penalize surface /surface area estimation)"
    ]
