--- a/weighted Hardy Weinberg initial exploration.ipynb
+++ b/weighted Hardy Weinberg initial exploration.ipynb
@@ -407,19 +407,29 @@
     "c0=5\n",
     "c1=100\n",
     "\n",
-    "ase5_500, ase100_500 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
-    "ase5_5000, ase100_5000 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
-    "ase5_50000, ase100_50000 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
+    "# ase5_500, ase100_500 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
+    "# ase5_5000, ase100_5000 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
+    "# ase5_50000, ase100_50000 = wHardy_Weinberg(n, m, c0, c1, acorn=1)\n",
     "\n",
+    "# import _pickle as pkl\n",
+    "# pkl.dump(ase5_500, open('ase5_500.pkl', 'wb'))\n",
+    "# pkl.dump(ase100_500, open('ase100_500.pkl', 'wb'))\n",
+    "\n",
+    "# pkl.dump(ase5_5000, open('ase5_5000.pkl', 'wb'))\n",
+    "# pkl.dump(ase100_5000, open('ase100_5000.pkl', 'wb'))\n",
+    "\n",
+    "# pkl.dump(ase5_50000, open('ase5_50000.pkl', 'wb'))\n",
+    "# pkl.dump(ase100_50000, open('ase100_50000.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import _pickle as pkl\n",
-    "pkl.dump(ase5_500, open('ase5_500.pkl', 'wb'))\n",
-    "pkl.dump(ase100_500, open('ase100_500.pkl', 'wb'))\n",
-    "\n",
-    "pkl.dump(ase5_5000, open('ase5_5000.pkl', 'wb'))\n",
-    "pkl.dump(ase100_5000, open('ase100_5000.pkl', 'wb'))\n",
-    "\n",
-    "pkl.dump(ase5_50000, open('ase5_50000.pkl', 'wb'))\n",
-    "pkl.dump(ase100_50000, open('ase100_50000.pkl', 'wb'))"
+    "pkl.load()"
    ]
   },
   {
